--- a/MetodOptimized_Lab2/MetodOptimized_Lab2.vcxproj
+++ b/MetodOptimized_Lab2/MetodOptimized_Lab2.vcxproj
@@ -125,6 +125,9 @@
   <ItemGroup>
     <ClCompile Include="MetodOptimized_Lab2.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Metods.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
